--- a/02-Express/package.json
+++ b/02-Express/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.18"
