Methods - GET and POST (Form Example)

--- a/01-Node-Basics/package.json
+++ b/01-Node-Basics/package.json
@@ -8,7 +8,7 @@
     "start:dev": "nodemon app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Codatrix",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.18"
