--- a/02-Express/package.json
+++ b/02-Express/package.json
@@ -7,7 +7,7 @@
     "start:dev": "nodemon app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Codatrix",
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
